# leechcraft

src/plugins/azoth/plugins/acetamide/: channelhandler.cpp  channelsmanager.cpp  ircserverhandler.cpp  ircserversocket.cpp
src/plugins/monocle/: CMakeLists.txt
src/plugins/monocle/plugins/epub/: CMakeLists.txt  document.cpp  document.h  epub.cpp  epub.h
src/plugins/monocle/plugins/epub/freedesktop/: leechcraft-monocle-epub-qt5.deskto  leechcraft-monocle-epub.desktop
